# process this file with autoconf to get a configure script

AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(libraw1394, 0.7)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

AC_CHECK_SIZEOF(void *, 8)

# set the libtool so version numbers
lt_major=4
lt_revision=0
lt_age=0

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)


CFLAGS="$CFLAGS -Wall -Wunused"
AC_OUTPUT([ Makefile src/Makefile debian/Makefile ])
